// Copyright (c) 2025 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.protocol.v30;

import "com/digitalasset/canton/crypto/v30/crypto.proto";
import "com/digitalasset/canton/protocol/v30/common_stable.proto";
import "com/digitalasset/canton/protocol/v30/merkle.proto";
import "com/digitalasset/canton/time/v30/time_proof.proto";
import "scalapb/scalapb.proto";

// Messages sent by a participant as part of the reassignment protocol

message ReassignmentId {
  string source_synchronizer_id = 1;
  // identifies the reassignment batch, built from a hash of source, target, contract ids, contract counters and timestamp.
  string unassign_id = 2;
}

// Messages sent by a participant as part of the reassignment protocol

message UnassignmentCommonData {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.AlphaProtoVersion";

  com.digitalasset.canton.crypto.v30.Salt salt = 1;
  string source_physical_synchronizer_id = 2;

  Stakeholders stakeholders = 3;
  repeated string reassigning_participant_uids = 4;

  string uuid = 5;
  int32 source_mediator_group = 6;
  ReassignmentSubmitterMetadata submitter_metadata = 7;
}

message ReassignmentViewTree {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.AlphaProtoVersion";

  bytes common_data = 1;
  BlindableNode participant_data = 2;
}

message AssignmentMediatorMessage {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StableProtoVersion";

  ReassignmentViewTree tree = 1;
  com.digitalasset.canton.crypto.v30.Signature submitting_participant_signature = 2;
}

message UnassignmentMediatorMessage {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.AlphaProtoVersion";

  ReassignmentViewTree tree = 1;
  com.digitalasset.canton.crypto.v30.Signature submitting_participant_signature = 2;
}

message AssignmentCommonData {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.AlphaProtoVersion";

  com.digitalasset.canton.crypto.v30.Salt salt = 1;
  string target_physical_synchronizer_id = 2;

  Stakeholders stakeholders = 3; // stakeholders of the contract

  string uuid = 4; // request uuid
  int32 target_mediator_group = 5;
  ReassignmentSubmitterMetadata submitter_metadata = 6;
  repeated string reassigning_participant_uids = 7;
}

message ReassignmentSubmitterMetadata {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.AlphaProtoVersion";

  string submitter = 1;
  string submitting_participant_uid = 2;
  string command_id = 3;
  string submission_id = 4; // optional
  string user_id = 5;
  string workflow_id = 6; // optional
}

message UnassignmentView {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.AlphaProtoVersion";

  com.digitalasset.canton.crypto.v30.Salt salt = 1;
  string target_physical_synchronizer_id = 2;
  com.digitalasset.canton.time.v30.TimeProof target_time_proof = 3;
  repeated ActiveContract contracts = 4;
}

message AssignmentView {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.AlphaProtoVersion";

  com.digitalasset.canton.crypto.v30.Salt salt = 1;
  repeated ActiveContract contracts = 2;
  ReassignmentId reassignment_id = 3;
}

message ActiveContract {
  v30.SerializableContract contract = 1;
  int64 reassignment_counter = 2;
}
